--- a/MijnTestApplicatie/app/src/main/AndroidManifest.xml
+++ b/MijnTestApplicatie/app/src/main/AndroidManifest.xml
@@ -18,6 +18,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+
         <activity
             android:name="com.example.xander.mijntestapplicatie.MyActivity"
             android:label="@string/app_name" >
@@ -27,7 +28,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-<<<<<<< HEAD
+
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -38,12 +39,12 @@
 
         <activity
             android:name="com.example.xander.mijntestapplicatie.MapsActivity"
-            android:label="@string/title_activity_maps" >
-=======
+            android:label="@string/title_activity_maps" />
+
         <activity
             android:name="com.example.xander.mijntestapplicatie.OverviewActivity"
             android:label="@string/title_activity_overview" >
->>>>>>> 7ec116dc6cc7c6074fc610d059569e4211f64ec8
+
         </activity>
     </application>
 
