--- a/MijnTestApplicatie/app/build.gradle
+++ b/MijnTestApplicatie/app/build.gradle
@@ -20,7 +20,8 @@ android {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:appcompat-v7:20.0.0'
     compile 'com.google.android.gms:play-services:4.2.42'
+    compile files('libs/gson-2.2.4.jar')
 }
