--- a/MijnTestApplicatie/app/src/main/AndroidManifest.xml
+++ b/MijnTestApplicatie/app/src/main/AndroidManifest.xml
@@ -18,7 +18,6 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-
         <activity
             android:name="nl.xannic.minor.touristguide.MyActivity"
             android:label="@string/app_name" >
@@ -28,7 +27,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
 
         <meta-data
             android:name="com.google.android.gms.version"
@@ -40,11 +38,13 @@
         <activity
             android:name="nl.xannic.minor.touristguide.MapsActivity"
             android:label="@string/title_activity_maps" />
-
         <activity
             android:name="nl.xannic.minor.touristguide.OverviewActivity"
             android:label="@string/title_activity_overview" >
-
+        </activity>
+        <activity
+            android:name="nl.xannic.minor.touristguide.LocationActivity"
+            android:label="@string/title_activity_location" >
         </activity>
     </application>
 
