--- a/TouristGuideApplicatie/app/build.gradle
+++ b/TouristGuideApplicatie/app/build.gradle
@@ -5,11 +5,11 @@ android {
     buildToolsVersion "19.1.0"
 
     defaultConfig {
-        applicationId "nl.xannic.minor.touristguideapplicatie"
+        applicationId "nl.xannic.minor.rondjerotterdam"
         minSdkVersion 16
         targetSdkVersion 21
-        versionCode 4
-        versionName "1.4"
+        versionCode 1
+        versionName "1.0"
     }
     buildTypes {
         release {
