--- a/TouristGuideApplicatie/app/src/main/AndroidManifest.xml
+++ b/TouristGuideApplicatie/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="nl.xannic.minor.touristguideapplicatie" >
+    package="nl.xannic.minor.rondjerotterdam" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -26,7 +26,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".Main"
+            android:name="nl.xannic.minor.rondjerotterdam.Main"
             android:label="@string/app_name" >
         </activity>
 
@@ -35,10 +35,10 @@
             android:value="@integer/google_play_services_version" />
         <meta-data
             android:name="com.google.android.maps.v2.API_KEY"
-            android:value="@string/google_maps_key" />
+            android:value="AIzaSyCTKSqIxBWFDl6AXdVHhbQAficiBsiYepk" />
 
         <activity
-            android:name=".SplashScreen"
+            android:name="nl.xannic.minor.rondjerotterdam.SplashScreen"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -47,7 +47,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".ItemActivity"
+            android:name="nl.xannic.minor.rondjerotterdam.ItemActivity"
             android:label="@string/title_activity_item" >
         </activity>
     </application>
